@@ -1,0 +1,82 @@
+pid_to_deviceid_map: "resources/pid_deviceid_mapping.csv" # generated by running map_pid_deviceid.py. See README for instructions.
+P_ID: "SS002" # replace by actual participant id
+START_TIME: "2023-07-25 00:00:00"
+END_TIME: "2023-07-27 00:00:00"
+timezone: "Australia/Melbourne" # replace by actual timezone
+input_directory: "participant_data/{P_ID}"
+session_data_file: "step1_data/{P_ID}/sessions.jsonl" # required for applicaion and keyboard analysis; generated by running extract_sessions.py with screen.jsonl for the corresponding P_ID
+cleaned_screentext_file: "step1_data/{P_ID}/clean_input.jsonl" # required for screen text description; generated by using screen text preprocessing pipeline from "Guardian Angel" project
+
+sensor_integration_time_window: 60 # minutes
+gate_time_window: 5 # minutes; required for wifi and bluetooth scan data integration.
+
+sensors:
+  - "applications_foreground"
+  - "applications_notifications"
+  - "battery"
+  - "bluetooth"
+  - "calls"
+  - "installations"
+  - "keyboard"
+  - "messages"
+  - "screen"
+  - "screentext"
+  - "wifi"
+  - "sensor_wifi"
+  - "locations"
+
+# location sampling rate
+frequency_gps: 180 # seconds
+frequency_network: 300 # seconds
+
+output_file: "description/{P_ID}_output.txt"
+daily_output_dir: "daily_description/{P_ID}"
+DISCARD_SYSTEM_UI: true
+GOOGLE_MAP_KEY: ""
+eps: 0.0000078  # DBSCAN clustering parameter: ~50m radius (0.0000078 radians × 6371000 m ≈ 50m)
+min_samples: 5  # DBSCAN clustering parameter: require at least 3 points to form a cluster
+night_time_start: 22 # Start of nighttime in 24-hour format, used for determining home location  
+night_time_end: 6 # End of nighttime in 24-hour format, used for determining home location
+
+blacklist_apps:
+  - AWARE-Light
+
+whitelist_system_apps:
+  - Phone
+  - Dialer
+  - Messages
+  - Contacts
+  - People
+  - Camera
+  - Gallery
+  - Photos
+  - Gboard
+  - Android Keyboard
+  - Calculator
+  - Clock
+  - Calendar
+  - Files
+  - File Manager
+  - Email
+  - Gmail
+  - Settings
+  - Browser
+  - Chrome
+  - Maps
+  - YouTube
+  - Play Store
+  - Play Music
+  - YouTube Music
+  - Drive
+  - Google Search
+  - Assistant
+  - Recorder
+  - Notes
+  - Keep
+  - Weather
+  # Optional pre-installed OEM apps
+  - Samsung Notes
+  - MIUI Security
+  - Huawei Health
+  - Samsung Internet Browser
+  - My Files
