@@ -1,4 +1,9 @@
-20250707
+2025-07-09
+- Updated sensor_narrator.py
+    - Location: clean up redundant code; allows skip when no location data avaliable.
+    - Implemented daily splitation
+
+2025-07-07
 - Added aware_narrator.py, extract_sessions.py, split_description, json2jsonl.py, map_pid_deviceid.py
 - Updated config.yaml
 - Added environment configuration files: environment.yml and requirements.txt
